trying to fix border-radius clipping issue

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -86,7 +86,7 @@
 .list-block input[type='text']:focus {
   /* color:transparent; */
 }
-.list-block li{
+.list-block li {
   outline: 3px solid #e2e5eb;
   outline-offset: -3.9px;
 }
@@ -129,6 +129,13 @@
   border: 1px solid #b2b2b2;
   height: 48px;
   width: 75%;
+}
+
+.select-input-main > input {
+  border: 1px solid #b2b2b2;
+  height: 48px;
+  width: 75%;
+  background-color: #e2e5eb !important;
 }
 
 .button.button-fill {
@@ -213,7 +220,8 @@
   margin-bottom: 20px;
 }
 
-#no-account, #create-account {
+#no-account,
+#create-account {
   text-align: center;
 }
 
@@ -226,5 +234,27 @@
 }
 
 .item-content {
-  border-radius: 15px;
+  background-color: #e2e5eb;
+}
+
+.form-inner-container {
+  list-style: none;
+  margin: 0 auto;
+  width: 75%;
+  border: 1px solid #b2b2b2;
+}
+
+#username-form-inner-container {
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+#password-form-inner-container {
+  border-top-right-radius: 0px;
+  border-top-left-radius: 0px;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border: 1px solid #b2b2b2;
 }
